--- a/PandemobiumStockTrader/Android/AndroidManifest.xml
+++ b/PandemobiumStockTrader/Android/AndroidManifest.xml
@@ -7,7 +7,8 @@
       android:versionCode="1"
       android:versionName="1.0">
 
-	<uses-permission android:name="android.permission.INTERNET" />      
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="10"/>      
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".MainActivity"
